<?xml version="1.0"?>
<package format="3">
  <name>aws_robomaker_racetrack_world</name>
  <version>1.0.0</version>
  <description>
    AWS RoboMaker package for a racetrack world for robot applications.
  </description>
  <license>Apache 2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
